Refactor song access flow and expand trivia pipeline

--- a/app/src/lib/i18n/locales/id.json
+++ b/app/src/lib/i18n/locales/id.json
@@ -36,16 +36,18 @@
     "startLearning": "Mulai Belajar",
     "noWalletsDetected": "Tidak ada dompet terdeteksi. Silakan instal MetaMask atau Rabby.",
     "signInToSeeFollowing": "Masuk untuk melihat feed Mengikuti Anda",
-    "initializingLit": "Menginisialisasi Lit Protocol...",
-    "createPasskey": "Silakan buat passkey menggunakan perangkat Anda...",
-    "authenticatingPasskey": "Mengautentikasi dengan passkey baru Anda...",
-    "creatingSession": "Membuat sesi aman...",
-    "authenticateDevice": "Silakan autentikasi dengan perangkat Anda...",
-    "fetchingAccount": "Mengambil akun Anda...",
+    "settingUp": "Menyiapkan...",
+    "createPasskey": "Buat passkey untuk masuk dengan aman",
+    "verifyingPasskey": "Memverifikasi...",
+    "almostDone": "Hampir selesai...",
+    "authenticateDevice": "Gunakan passkey untuk masuk",
+    "fetchingAccount": "Sedang masuk...",
     "googleNotAvailable": "Login Google tidak tersedia. Silakan gunakan Passkey.",
     "discordNotAvailable": "Login Discord tidak tersedia. Silakan gunakan Passkey.",
     "eoaNotSupported": "Login EOA tidak didukung. Silakan gunakan Passkey.",
-    "orConnectWallet": "Atau Hubungkan Dompet"
+    "orConnectWallet": "Atau Hubungkan Dompet",
+    "finishingSetup": "Menyelesaikan pengaturan...",
+    "allSet": "Selesai!"
   },
   "feed": {
     "forYou": "Untuk Anda",
