--- a/app/src/lib/i18n/locales/vi.json
+++ b/app/src/lib/i18n/locales/vi.json
@@ -36,16 +36,18 @@
     "startLearning": "Bắt đầu học",
     "noWalletsDetected": "Không phát hiện ví. Vui lòng cài đặt MetaMask hoặc Rabby.",
     "signInToSeeFollowing": "Đăng nhập để xem bảng tin theo dõi",
-    "initializingLit": "Đang khởi tạo Lit Protocol...",
-    "createPasskey": "Vui lòng tạo passkey bằng thiết bị của bạn...",
-    "authenticatingPasskey": "Đang xác thực với passkey mới...",
-    "creatingSession": "Đang tạo phiên bảo mật...",
-    "authenticateDevice": "Vui lòng xác thực bằng thiết bị của bạn...",
-    "fetchingAccount": "Đang tải tài khoản của bạn...",
+    "settingUp": "Đang thiết lập...",
+    "createPasskey": "Tạo passkey để đăng nhập an toàn",
+    "verifyingPasskey": "Đang xác minh...",
+    "almostDone": "Sắp xong...",
+    "authenticateDevice": "Sử dụng passkey để đăng nhập",
+    "fetchingAccount": "Đang đăng nhập...",
     "googleNotAvailable": "Đăng nhập Google không khả dụng. Vui lòng sử dụng Passkey.",
     "discordNotAvailable": "Đăng nhập Discord không khả dụng. Vui lòng sử dụng Passkey.",
     "eoaNotSupported": "Đăng nhập EOA không được hỗ trợ. Vui lòng sử dụng Passkey.",
-    "orConnectWallet": "Hoặc kết nối ví"
+    "orConnectWallet": "Hoặc kết nối ví",
+    "finishingSetup": "Đang hoàn tất thiết lập...",
+    "allSet": "Hoàn tất!"
   },
   "feed": {
     "forYou": "Dành cho bạn",
