--- a/app/src/lib/i18n/locales/zh.json
+++ b/app/src/lib/i18n/locales/zh.json
@@ -36,16 +36,18 @@
     "startLearning": "开始学习",
     "noWalletsDetected": "未检测到钱包。请安装MetaMask或Rabby。",
     "signInToSeeFollowing": "登录后查看关注动态",
-    "initializingLit": "正在初始化Lit协议...",
-    "createPasskey": "请使用您的设备创建密钥...",
-    "authenticatingPasskey": "正在使用新密钥验证...",
-    "creatingSession": "正在创建安全会话...",
-    "authenticateDevice": "请使用您的设备验证...",
-    "fetchingAccount": "正在获取您的账户...",
+    "settingUp": "正在设置...",
+    "createPasskey": "创建密钥以安全登录",
+    "verifyingPasskey": "正在验证...",
+    "almostDone": "即将完成...",
+    "authenticateDevice": "请使用密钥登录",
+    "fetchingAccount": "正在登录...",
     "googleNotAvailable": "Google登录不可用。请使用密钥。",
     "discordNotAvailable": "Discord登录不可用。请使用密钥。",
     "eoaNotSupported": "不支持EOA登录。请使用密钥。",
-    "orConnectWallet": "或连接钱包"
+    "orConnectWallet": "或连接钱包",
+    "finishingSetup": "正在完成设置...",
+    "allSet": "设置完成！"
   },
   "feed": {
     "forYou": "为你推荐",
